# weather-2

./: .gitignore  CMakeLists.txt  README.md  build.sh
libs/: CMakeLists.txt
libs/geocoding/: geocoding.cpp  geocoding.h
libs/weather/: weather.cpp  weather.h
src/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
tests/: CMakeLists.txt  test_geocoding.cpp  test_weather.cpp
